// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AuxRuntime interpreted shout() globalThis should not allow deleting properties from globalThis 1`] = `
Object {
  "actions": Array [],
  "errors": Array [],
  "listeners": Array [],
  "results": Array [
    undefined,
  ],
}
`;

exports[`AuxRuntime interpreted shout() should compile listeners to use the html.h() function for JSX 1`] = `
Array [
  Object {
    "__": null,
    "__b": 0,
    "__c": null,
    "__d": undefined,
    "__e": null,
    "__h": null,
    "__k": null,
    "__v": 1,
    "constructor": undefined,
    "key": undefined,
    "props": Object {},
    "ref": undefined,
    "type": "div",
  },
]
`;

exports[`AuxRuntime not-interpreted shout() globalThis should not allow deleting properties from globalThis 1`] = `
Object {
  "actions": Array [],
  "errors": Array [],
  "listeners": Array [],
  "results": Array [
    undefined,
  ],
}
`;

exports[`AuxRuntime not-interpreted shout() should compile listeners to use the html.h() function for JSX 1`] = `
Array [
  Object {
    "__": null,
    "__b": 0,
    "__c": null,
    "__d": undefined,
    "__e": null,
    "__h": null,
    "__k": null,
    "__v": 2,
    "constructor": undefined,
    "key": undefined,
    "props": Object {},
    "ref": undefined,
    "type": "div",
  },
]
`;
